# Counter

./: .env  .gitignore  CMakeLists.txt  README.md  main.cpp  makemytrade-key.pem  package-lock.json  package.json  server.js  update.txt
backend/: CMakeLists.txt  main.cpp
backend/include/: logger.cpp  logger.h  order_simulator.h  postgres_client.h  redis_client.h  zmq_sender.h
backend/src/: logger.cpp  order_simulator.cpp  postgres_client.cpp  redis_client.cpp  zmq_sender.cpp
extras/: CMakeLists.txt
public/: create_strategy.html  deployments.html  help.txt  index.html  login copy.css  login-step.js  login.css  login.html  script.js  signup.css  signup.html  strategies.html  styles.css  test.css
public/css/: card.css  create_strategy.css  strategies-layout.css  strategies.css
public/js/: create_strategy.js  deployments.js  strategies.js
public/others/: logo.ai  logo_ - Copy.ai  logo_ blue .ai  logo_ copy.ai  logo_ orange New Finalai (space added6_ round t ).ai  logo_ orange New Finalai.ai  logo_ orange new.ai  logo_ orange normal style.ai  logo_ orange.ai  logo_ spacing_added_with grey text.ai  logo_ with login.ai  logo_.ai  logo_final211025.ai
server/: routes.js  server.js  strategyRoutes.js
server/auth/: captcha.js  login.js  logout.js  rateLimiter.js  signup.js  validateUser.js
server/db/: init.js  pg.js  sessionStore.js
server/middleware/: authMiddleware.js  errorHandler.js
server/redis/: client.js
server/socket/: socketHandler.js
server/zmq/: receiver.js
sql/: schema.sql
tests/: check_schema_with_data.js
